--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-fontawesome": "^1.7.1",
+    "react-helmet-async": "^1.0.4",
     "react-scripts": "3.4.0"
   },
   "scripts": {
