--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "material-icons-react": "^1.0.4",
     "query-string": "^6.11.0",
     "react": "^16.12.0",
+    "react-debounce-input": "^3.2.2",
     "react-dom": "^16.12.0",
     "react-fontawesome": "^1.7.1",
     "react-helmet-async": "^1.0.4",
